--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,6 @@
 body {
+    margin: 0;
+    height: 100vh;
     font-family: 'Courier New', Courier, monospace;
     background-color: cadetblue;
 }
@@ -6,19 +8,33 @@ body {
 h1 {
     text-align: center;
     font-size: 75px;
+    color: seashell;
 }
 
+body,
 .container,
 .row,
-.grid {
+.grid,
+.options {
     display: flex;
 }
 
-.container,
-.grid {
-    flex-direction: column;
+.container {
+    align-items: center;
+    justify-content: space-evenly;
+    flex: 1;
+}
+
+.grid,
+.options {
     align-items: center;
     justify-content: center;
+}
+
+body,
+.grid,
+.options {
+    flex-direction: column;
 }
 
 .grid {
@@ -27,6 +43,8 @@ h1 {
     min-width: 480px;
     min-height: 480px;
     border: 1px solid black;
+    background-color: white;
+    box-shadow: 5px 5px 7px 2px rgba(0, 0, 0, 0.658);
 }
 
 .tile {
@@ -35,9 +53,39 @@ h1 {
     border: 0;
     min-width: 30px;
     min-height: 30px;
-    flex: 0 0 auto;
+    flex: 0 1 auto;
 }
 
 .colored {
     background-color: black;
+}
+
+.options {
+    gap: 50px;
+}
+
+.option {
+    font-size: 20px;
+    color: white;
+    background-color: blueviolet;
+    border-radius: 10px;
+    border: 2px solid purple;
+    min-width: 200px;
+    padding: 10px 20px;
+    box-shadow: 5px 5px 7px 2px rgba(0, 0, 0, 0.658)
+}
+
+.current {
+    height: 100px;
+    width: 100px;
+    background-color: black;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
+.footer {
+    margin: 0;
+    padding: 30px 0;
+    text-align: center;
+    font-size: 16px;
 }
