--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,6 @@ body,
     flex: 1;
 }
 
-.grid,
 .options {
     align-items: center;
     justify-content: center;
@@ -47,13 +46,15 @@ body,
     box-shadow: 5px 5px 7px 2px rgba(0, 0, 0, 0.658);
 }
 
+.row {
+    flex: 1 1 auto;
+}
+
 .tile {
     box-sizing: border-box;
     margin: 0;
     border: 0;
-    min-width: 30px;
-    min-height: 30px;
-    flex: 0 1 auto;
+    flex: 1 1 0;
 }
 
 .colored {
