Add function to change drawing color.
Added a function to switch between black and a random rgb color for drawing.

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,6 @@ body,
     flex: 1 1 0;
 }
 
-.colored {
-    background-color: black;
-}
-
 .options {
     gap: 50px;
 }
@@ -79,9 +75,17 @@ body,
 .current {
     height: 100px;
     width: 100px;
-    background-color: black;
     border-radius: 50%;
     border: 2px solid white;
+}
+
+.black {
+    background: black;
+}
+
+.rainbow {
+    background: radial-gradient(closest-side, rgba(255, 0, 0, 1) 0%, rgba(255, 154, 0, 1) 10%, rgba(208, 222, 33, 1) 20%, rgba(79, 220, 74, 1) 30%, rgba(63, 218, 216, 1) 40%, rgba(47, 201, 226, 1) 50%, rgba(28, 127, 238, 1) 60%, rgba(95, 21, 242, 1) 70%, rgba(186, 12, 248, 1) 80%, rgba(251, 7, 217, 1) 90%, rgba(255, 0, 0, 1) 100%);
+    ;
 }
 
 .footer {
